[workspace]
members = ["crates/*", "nitro_repo"]
resolver = "2"
[workspace.package]
version = "2.0.0-BETA"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
edition = "2021"
license = "MIT"
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
utoipa = { version = "5.0.0-alpha", features = ["chrono", "uuid"] }

nr-core = { path = "crates/core" }
nr-macros = { path = "crates/macros" }
nr-storage = { path = "crates/storage" }
# Rust Utilities
futures = "0.3"
derive_more = { version = "1.0.0", features = [
    "deref",
    "from",
    "into",
    "as_ref",
] }
ahash = "0.8"
parking_lot = { version = "0.12", features = [] }
futures-util = "0.3.21"
digestible = { version = "0.2", features = ["base64"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
mime_guess = "2"
mime = "0.3"
sha2 = "0.10"
base64 = "0.22"
# Error Handling
thiserror = "1"
anyhow = "1"
schemars = "0.8"
reqwest = { version = "0.12", features = [
    "stream",
    "http2",
    "json",
    "rustls-tls",
], default-features = false }
badge-maker = { git = "https://github.com/wyatt-herkamp/badge-maker.git", branch = "updates_and_improvements" }
auto_impl = "1.2"

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1" }
http = "1.1"
http-body-util = "0.1"
http-body = "1"
bytes = "1"
pin-project = "1"
[workspace.dependencies.sqlx]
version = "0.8"
default_features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "json",
    "derive",
    "uuid",
    "migrate",
]
[workspace.lints.rust]
async_fn_in_trait = "allow"
deprecated = "deny"
