[workspace]
members = ["crates/*", "nitro_repo"]
resolver = "3"
[workspace.package]
version = "2.0.0-BETA"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/wyatt-herkamp/nitro_repo"
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"


tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-appender = "0.2"
utoipa = { version = "5", features = ["chrono", "uuid", "url", "debug"] }
rand = "0.9"

nr-core = { path = "crates/core" }
nr-macros = { path = "crates/macros" }
nr-storage = { path = "crates/storage" }
# Rust Utilities
futures = "0.3"
derive_more = { version = "2.0", features = [
    "deref",
    "from",
    "into",
    "as_ref",
    "debug",
] }
ahash = "0.8"
parking_lot = { version = "0.12", features = [] }
futures-util = "0.3.21"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
mime_guess = "2"
mime = "0.3"
either = "1.12"


base64 = "0.22"
derive_builder = "0.20"

# Error Handling
schemars = { git = "https://github.com/wyatt-herkamp/schemars.git", branch = "if_for_adjacent" }

thiserror = "2"
anyhow = "1"
badge-maker = { git = "https://github.com/wyatt-herkamp/badge-maker.git", branch = "updates_and_improvements" }
auto_impl = "1.2"
once_cell = "1.8"
regex = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1" }
http = "1"
http-body-util = "0.1"
http-body = "1"
bytes = "1"
pin-project = "1"
url = "2"
## Hashing
digestible = { git = "https://github.com/wyatt-herkamp/digestible.git", features = [
    "base64",
    "uuid",
    "chrono",
] }
digest = { version = "0.10", features = ["std", "alloc"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
clap = { version = "4", features = ["derive"] }

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "json",
    "derive",
    "uuid",
    "migrate",
]
[workspace.dependencies.reqwest]
version = "0.12"
features = ["stream", "http2", "json", "rustls-tls"]
default-features = false
[workspace.lints.rust]
async_fn_in_trait = "allow"
deprecated = "deny"

[profile.dev.package."argon2"]
opt-level = 3
[profile.dev.package."tokio"]
opt-level = 3
[profile.dev.package."digest"]
opt-level = 3
[profile.dev.package."md-5"]
opt-level = 3
[profile.dev.package."sha1"]
opt-level = 3
[profile.dev.package."sha2"]
opt-level = 3
[profile.dev.package."sha3"]
opt-level = 3
