[package]
name = "nitro_repo"
version = "1.0.3"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"
build = "build.rs"
license-file = "../LICENSE"
[dependencies]
# Web
actix-web = { version = "4.1", features = ["openssl"] }
actix-cors = "0.6"
actix-service = "2.0"
openssl = { version = "0.10", features = ["v110"], optional = true }
actix-files = "0.6"
# Partly Web
lettre = "0.10"
handlebars = "4.3"
# Database
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.10"
r2d2_mysql = "21.0.0"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.5"
toml = "0.5"

# utils
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
argon2 = "0.4"
chrono = "0.4.19"
regex = "1.6"
futures-util = "0.3.21"
base64 = "0.13.0"
tokio = "1.20"
style-term = "1.0.0"
# Log
# Unstable Use git = "https://github.com/wherkamp/nitro_log"
nitro_log = { version = "1.0.1", features = ["chrono", "style-term"] }
log = "0.4.17"
# Rust Internal
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.2"
derive_more = "0.99.17"
async-trait = "0.1.56"
thiserror = "1.0.31"
anyhow = "1.0.58"
either = "1.7.0"
# Badge Stuff
badge-maker = "0.3.1"
# Webhook
webhook = "2.0.0"
# Installer
tui = "0.18.0"
crossterm = "0.24.0"
clap = { version = "3.2.12", features = ["derive"] }
unicode-width = "0.1.9"
this_actix_error = { git = "https://github.com/wyatt-herkamp/this_actix_errors.git" }
[build-dependencies]
vergen = "7.1.0"
[features]
ssl = ["openssl", "actix-web/openssl"]

