[package]
name = "nitro_repo"
version = "1.1.0-BETA"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"
build = "build.rs"
license-file = "../LICENSE"
default-run = "nitro_repo_full"

[lib]
name = "api"
path = "src/lib.rs"
[[bin]]
name = "nitro_repo_full"
required-features = ["multi_storage"]
[[bin]]
name = "nitro_utils"
required-features = ["clap"]
[dependencies]
# Web
actix-web = { version = "4.3", features = ["cookies"] }
actix-cors = "0.6"
actix-service = "2"
openssl = { version = "0.10", features = ["v110"], optional = true }
actix-files = "0.6"
# Partly Web
handlebars = "4"
# Database
sea-orm = { version = "0.11", features = ["runtime-actix-native-tls", "macros"] }
sqlx = "0.6"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
toml = "0.7"
# utils
rand = "0.8.5"
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
argon2 = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.6.0"
futures-util = "0.3.21"
base64 = "0.21.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
style-term = "1.0.0"
mime_guess = "2.0.4"
paste = "1.0.7"
reqwest = { version = "0.11.11", features = ["stream"] }
bytes = "1.2.0"
tokio-stream = "0.1.9"
lockfree = { package = "tux_lockfree", git = "https://github.com/wyatt-herkamp/tux_lockfree.git" }
sha2 = "0.10.2"
ahash="0.8"
# Log
nitro_log = { git = "https://github.com/wyatt-herkamp/nitro_log", features = ["chrono", "style-term"] }
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_std", "kv_unstable_serde"] }
# Rust Internal
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
async-trait = "0.1"
thiserror = "1"
# Badge Stuff
badge-maker = "0.3"

# Installer
clap = { version = "4", features = ["derive"], optional = true }
semver = { version = "1", features = ["std", "serde"] }
# Cache
comrak = "0.18.0"
# Staging
tempfile = "3.3.0"
git2 = "0.17.0"
schemars = "0.8.10"
# Maven Stuff
maven-rs = { git = "https://github.com/wyatt-herkamp/maven-rs.git" }
this_actix_error = { git = "https://github.com/wyatt-herkamp/this_actix_errors.git" }
zip = { git="https://github.com/zip-rs/zip.git" }
typeshare = "1.0.0"
current_semver = {git="https://github.com/wyatt-herkamp/current_semver.git"}
[build-dependencies]
vergen = { version = "8.1.1",features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
[features]
# The latest Updaters will always be under default features
default = ["multi_storage", "postgres", "sqlite", "mysql"]
ssl = ["openssl", "actix-web/openssl"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
multi_storage = []

# Development Tools
## Allows you to add a file called unsafe_cookies.txt to the active directory. And contains KEY=VALUE(Value being the user id) for cookies/sessions to be added to the system upon start
unsafe_cookies = []
