[package]
name = "nitro_repo"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"
license.workspace = true
default-run = "nitro_repo_full"

[lib]
name = "api"
path = "src/lib.rs"
[[bin]]
name = "nitro_repo_full"
required-features = ["multi_storage"]
[[bin]]
name = "nitro_utils"
required-features = ["clap"]
[dependencies]
# Web
actix-web = { version = "4.3", features = ["cookies", "rustls-0_21"] }
actix-cors = "0.6"
actix-service = "2"
tracing-actix-web = "0.7"

rustls = { version = "0.21" }
rustls-pemfile = { version = "1" }
actix-files = "0.6"
# Partly Web
handlebars = "4"
# Database
sea-orm = { version = "0.12.4", features = ["runtime-actix-rustls", "macros"] }
sqlx = "0.7.2"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
toml.workspace = true
# utils
rand = "0.8.5"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.6"
futures-util = "0.3"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
style-term = "1"
mime_guess = "2"
paste = "1"
reqwest = { version = "0.11", features = ["stream"] }
bytes = "1.2"
tokio-stream = "0.1.9"
lock_freedom = { git = "https://github.com/wyatt-herkamp/lock_freedom.git" }
sha2 = "0.10.2"
ahash = "0.8"
parking_lot = { version = "0.12", features = [] }
log = { version = "0.4", features = [
    "kv_unstable",
    "kv_unstable_std",
    "kv_unstable_serde",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.21", features = [] }
opentelemetry-otlp = { version = "0.14", default-features = true, features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
# Rust Internal
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
# Badge Stuff
badge-maker = "0.3"
redb = "1"

# Installer
clap = { version = "4", features = ["derive"], optional = true }
semver = { version = "1", features = ["std", "serde"] }
# Cache
comrak = "0.19.0"
# Staging
tempfile = "3.3.0"
git2 = "0.18.1"
schemars = "0.8.10"
config_types = { git = "https://github.com/wyatt-herkamp/config_types.git", features = [
    "strum",
    "digestible",
] }
# Maven Stuff
maven-rs = { git = "https://github.com/wyatt-herkamp/maven-rs.git" }
this_actix_error = { git = "https://github.com/wyatt-herkamp/this_actix_errors.git" }
zip = { git = "https://github.com/zip-rs/zip.git" }
typeshare = "1.0.0"
current_semver = "0.1.1"

[build-dependencies]
vergen = { version = "8.1.1", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
[features]
# The latest Updaters will always be under default features
default = ["multi_storage", "postgres", "sqlite", "mysql"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
multi_storage = []
