[package]
name = "nitro_repo"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"
license.workspace = true


[dependencies]
# Web
axum = { version = "0.7", features = ["macros", "tokio"] }
axum-extra = { version = "0.9", features = [
    "multipart",
    "cookie",
    "typed-header",
] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["full"] }
tower-service = "0.3.2"
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
mime.workspace = true
http-body-util.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-scalar = { version = "0.2.0-alpha", features = [
    "axum",
], optional = true }
async-trait = "0.1"
# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23" }
rustls-pemfile = { version = "2" }
# Partly Web
handlebars = "6"
# Database
sqlx.workspace = true
# Serde
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# utils
futures.workspace = true
rand = "0.8"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono.workspace = true
regex = "1"
futures-util.workspace = true
base64.workspace = true
tokio.workspace = true
uuid.workspace = true
sha2.workspace = true
schemars.workspace = true
reqwest.workspace = true
bytes.workspace = true
ahash.workspace = true
parking_lot.workspace = true
# Rust Internal
strum.workspace = true
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
# Badge Stuff
badge-maker.workspace = true
pin-project = "1"
clap = { version = "4", features = ["derive"] }
semver = { version = "1", features = ["std", "serde"] }

# Staging
tempfile = "3"
# Maven Stuff
maven-rs = { git = "https://github.com/wyatt-herkamp/maven-rs.git" }
zip = { version = "2" }
current_semver = "0.1"
nr-core.workspace = true
nr-macros.workspace = true
nr-storage.workspace = true
redb = { version = "2.1" }
config_types = { git = "https://github.com/wyatt-herkamp/config_types.git", features = [
    "regex_types",
    "strum",
] }
auto_impl.workspace = true
# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# OpenTelemetry - Tracing framework
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = [] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", default-features = true }

[features]
default = ["utoipa-scalar"]
builtin_frontend = []

[lints]
workspace = true
