[package]
name = "nitro_repo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dev-dependencies]
pretty_assertions = "1.1"
[dependencies]
# Web
axum = { version = "0.8", features = ["macros", "tokio", "ws"] }
axum-extra = { version = "0.10", features = [
    "multipart",
    "cookie",
    "typed-header",
] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["full"] }
tower-service = "0.3.2"
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
mime.workspace = true
mime_guess.workspace = true
http-body = "1"

http-body-util.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"], optional = true }
async-trait = "0.1"
# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23" }
rustls-pemfile = { version = "2" }
# Partly Web
handlebars = { version = "6", features = ["rust-embed"] }
# Database
sqlx.workspace = true
# Serde
serde.workspace = true
serde_json.workspace = true
serde-env = "0.2"

toml.workspace = true
# utils
futures.workspace = true
rand.workspace = true
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono.workspace = true
regex = "1"
futures-util.workspace = true
base64.workspace = true
tokio.workspace = true
uuid.workspace = true
flume = "0.11"
sha2.workspace = true
schemars.workspace = true
reqwest.workspace = true
bytes.workspace = true
ahash.workspace = true
parking_lot.workspace = true
# Rust Internal
strum.workspace = true
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
# Badge Stuff
badge-maker.workspace = true
pin-project = "1"
clap.workspace = true
semver = { version = "1", features = ["std", "serde"] }

# Staging
tempfile = "3"
# Maven Stuff
maven-rs = { git = "https://github.com/wyatt-herkamp/maven-rs.git" }
zip = { version = "2" }
current_semver = "0.1"
nr-core.workspace = true
nr-macros.workspace = true
nr-storage.workspace = true
redb = { version = "2.1" }
tuxs-config-types = { git = "https://github.com/wyatt-herkamp/tuxs-config-types.git", features = [
    "chrono",
] }
auto_impl.workspace = true
digestible.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# OpenTelemetry - Tracing framework
tracing-opentelemetry = "0.30"
opentelemetry = { version = "0.29", features = [] }
opentelemetry_sdk = { version = "0.29", features = [
    "rt-tokio",
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-otlp = { version = "0.29", default-features = true, features = [
    "grpc-tonic",
    "http-proto",
    "http-json",
] }
opentelemetry-appender-tracing = { version = "0.29" }
lettre = { version = "0.11", features = [
    "builder",
    "tokio1",
    "smtp-transport",
    "tokio1-rustls-tls",
], default-features = false }
url = "2"
inquire = "0.7"
serde_path_to_error = "0.1"

[features]
default = ["utoipa-scalar"]
frontend = []

[lints]
workspace = true


[build-dependencies]
zip = { version = "2" }

walkdir = "2"
anyhow = "1.0"
camino = "1.1"
