[package]
name = "nrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["stream", "json"] }
bytes = "1.2.0"
uuid = { version = "1.1.2", features = ["serde"] }
anyhow = { version = "1.0.58" }
style-term = "1.0.0"
inquire = "0.3.0-alpha.2"
directories = "4.0.1"