[package]
name = "nr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
base64.workspace = true
sha2.workspace = true
uuid.workspace = true
strum.workspace = true
schemars.workspace = true
badge-maker.workspace = true
utoipa.workspace = true
once_cell.workspace = true
regex.workspace = true
rand.workspace = true
http.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
[lints]
workspace = true
