[package]
name = "nr-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust API for Nitro Repo"
[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
nr-core.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
bytes.workspace = true
[dev-dependencies]
tokio.workspace = true
anyhow = "1"
tracing-subscriber.workspace = true
tracing-appender.workspace = true
[lints]
workspace = true
