[package]
name = "nr-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
nr-core.workspace = true
tracing.workspace = true
tokio.workspace = true
strum.workspace = true
anyhow.workspace = true
mime_guess.workspace = true
mime.workspace = true
derive_more.workspace = true
base64.workspace = true
ahash.workspace = true
http.workspace = true
utoipa.workspace = true
http-body.workspace = true
tokio-util = "0.7"
pin-project.workspace = true
futures.workspace = true

bytes.workspace = true
# Hashing Algorithms
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
digest.workspace = true

postcard = { version = "1.0", features = ["use-std", "alloc"] }
[lints]
workspace = true
