[package]
name = "nr-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
nr-core.workspace = true
tracing.workspace = true
tokio.workspace = true
strum.workspace = true
anyhow.workspace = true
mime_guess.workspace = true
mime.workspace = true
derive_more.workspace = true
base64.workspace = true
ahash.workspace = true
http.workspace = true
utoipa.workspace = true
http-body.workspace = true
tokio-util.workspace = true
pin-project.workspace = true
futures.workspace = true

bytes.workspace = true
# Hashing Algorithms
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
digest.workspace = true

postcard = { version = "1.0", features = ["use-std", "alloc"] }
either.workspace = true
rust-s3 = "0.35"

[lints]
workspace = true

[dev-dependencies]
toml.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
nr-core = { workspace = true, features = ["testing"] }
anyhow = { workspace = true }
